--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-hacker
+title: Fulbright Specialist to Morocco
+description: Site to house instructions, code, and data for Matthew Hannah\'s Fulbright Specialist trip to Morocco in 2022.
