--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-hacker
+theme: jekyll-theme-midnight
 title: Fulbright Specialist to Morocco
 description: Site to house instructions, code, and data for Matthew Hannah\'s Fulbright Specialist trip to Morocco in 2022.
 # Site navigation links
