--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-midnight
 title: Fulbright Specialist to Morocco
-description: Site to house instructions, code, and data for Matthew Hannah\'s Fulbright Specialist trip to Morocco in 2022.
+description: Site to house instructions, code, and data for Matthew Hannah's Fulbright Specialist trip to Morocco in 2022.
 # Site navigation links
 - title: Home
   url: /
