--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,7 @@ theme: jekyll-theme-midnight
 title: Fulbright Specialist to Morocco
 description: Site to house instructions, code, and data for Fulbright Specialist trip to Morocco in 2022.
 
+# Menu
+navigation: 
+  -{file: "index.md", title: Home, icon: home}
+  -{file: "open-refine.md", title: Open Refine, icon: refine}
