--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,12 @@ description: Site to house instructions, code, and data for Fulbright Specialist
 
 # Menu
 navigation: 
-  -{file: "index.md", title: Home, icon: home}
-  -{file: "open-refine.md", title: Open Refine, icon: refine}
+  -{file: "index.md", title: "Home", icon: home}
+  -{file: "open-refine.md", title: "Open Refine", icon: refine}
+  
+# External
+
+external: 
+  -{title: Mail, icon: enevelope, url: "mailto:hannah8@purdue.edu"}
+  -{title: Github, icon: github, url: "https://github.com/m-n-hannah"}
+  -{title: Twitter, icon: twitter, url: "https://twitter.com/TinkeringHuman"}
