--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: Site to house instructions, code, and data for Fulbright Specialist
 # Menu
 navigation: 
   -{file: "index.md", title: "Home", icon: home}
-  -{file: "open-refine.md", title: "Open Refine", icon: refine}
+  -{file: "open-refine.md", title: "Open Refine", icon: address-card}
   
 # External
 
