--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ show_social: true
 # Menu
 navigation: 
   -{file: "index.md", title: "Home", icon: home}
-  -{file: "open-refine.md", title: "Open Refine", icon: address-card}
+  #-{file: "open-refine.md", title: "Open Refine", icon: address-card}
   
 # External
 
