--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,12 @@ description: Site to house instructions, code, and data for Fulbright Specialist
 
 #Layout
 show_social: true
+sidebar: false
 
 # Menu
 navigation: 
   -{file: "index.md", title: "Home", icon: home}
-  #-{file: "open-refine.md", title: "Open Refine", icon: address-card}
+  -{file: "open-refine.md", title: "Open Refine", icon: address-card}
   
 # External
 
