--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,6 @@ navigation:
 # External
 
 external: 
-  -{title: Mail, icon: enevelope, url: "mailto:hannah8@purdue.edu"}
+  #-{title: Mail, icon: enevelope, url: "mailto:hannah8@purdue.edu"}
   -{title: Github, icon: github, url: "https://github.com/m-n-hannah"}
   -{title: Twitter, icon: twitter, url: "https://twitter.com/TinkeringHuman"}
